create readme file and setup env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/app
+    environment:
+      - APP_DATABASE_HOST=db
+      - APP_DATABASE_NAME=db_dev
+      - APP_DATABASE_USERNAME=admin
+      - APP_DATABASE_PASSWORD=admin
+      - TEST_DATABASE_NAME=db_test
     ports:
       - "3000:3000"
     depends_on:
