--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,26 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: admin
-  password: admin
+  host: <%= ENV["APP_DATABASE_HOST"] %>
+  username: <%= ENV["APP_DATABASE_USERNAME"] %>
+  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db_dev
+  database: <%= ENV["APP_DATABASE_NAME"] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db_test
+  database: <%= ENV["TEST_DATABASE_NAME"] %>
 
 production:
   <<: *default
-  host: <%= ENV["APP_DATABASE_HOST"] %>
-  username: <%= ENV["APP_DATABASE_USERNAME"] %>
-  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  host: <%= ENV["PROD_DATABASE_HOST"] %>
+  database: <%= ENV["PROD_DATABASE_NAME"] %>
+  username: <%= ENV["PROD_DATABASE_USERNAME"] %>
+  password: <%= ENV["PROD_DATABASE_PASSWORD"] %>
